public/src/scss/layout/_player.scss
body {
    padding-bottom: 54px;

    @include media(tablet) {
        padding-bottom: 80px;
    }
}

.view-player {
    position: fixed;
    bottom: -100%;
    left: 0;
    right: 0;
    height: 44px;
    background: $grayMedium;
    border-top: 1px solid rgba($grayDark, 0.2);
    transition: height $transition;
    z-index: 9;

    @include media(tablet) {
        height: 70px;
    }

    &.visible {
        bottom: 0;
    }

    .player-scrubber {
        .player-scrubber-pane {
            cursor: pointer;
            -webkit-appearance: none;
            margin: 0;
            height: 2px;
            background: $grayLight;
            width: 100%;
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            z-index: 2;
            transition: background $transition;

            @include media(web) {
                height: 3px;
            }

            &:before {
                content: '';
                position: absolute;
                top: -10px;
                left: 0;
                right: 0;
                bottom: -10px;
            }

            &:focus {
                outline: none;
            }

            &::-webkit-slider-runnable-track,
            &::-moz-range-track {
                background: $grayLight;
                border: 0;
                width: 100%;
                height: 2px;
                cursor: pointer;
                transition: all .2s ease;
            }

            &::-webkit-slider-thumb {
                -webkit-appearance: none;
                background: $accent;
                box-sizing: border-box;
                width: 10px;
                height: 10px;
                border: 0;
                border-radius: 20px;
                cursor: pointer;
                position: relative;
                z-index: 3;

                .touchevents & {
                    width: 20px;
                    height: 20px;
                }
            }
        }

        .player-scrubber-progress {
            content: '';
            position: absolute;
            top: 0;
            left: 0;
            height: 2px;
            background: $accent;
            z-index: 3;

            @include media(web) {
                height: 3px;
            }
        }

        .no-touchevents &:hover {
            .player-scrubber-pane {
                background: lighten($grayLight, 20%);
            }
            .player-scrubber-progress {
                background: lighten($accent, 10%);
            }
        }
    }

    .player-mobile {
        position: absolute;
        right: 0;
        bottom: 0;
        top: 0;
        width: 80px;
        @extend %clearfix;

        @include media(tablet) {
            display: none;
        }

        a {
            float: left;
            width: 40px;
            height: 44px;
            line-height: 44px;
            text-align: center;

            .icon {
                vertical-align: middle;
                display: inline-block;
            }
        }
    }

    .player-collapse {
        width: 40px;
        height: 40px;
        position: absolute;
        top: 0;
        right: 0;
        text-align: center;
        line-height: 40px;
        display: none;

        .icon {
            vertical-align: middle;
            display: inline-block;
        }
    }

    .player-details {
        position: relative;
        height: 100%;
        padding-left: 44px + 10px;
        padding-top: 10px;
        padding-right: 80px;

        @include media(tablet) {
            background: $grayMedium;
            display: inline-block;
            box-sizing: border-box;
            padding-left: 70px + 15px;
            padding-top: 15px;
            padding-right: 15px;
            max-width: 300px;
            transition: max-width 0.3s ease-in-out;
            z-index: 1;
        }

        .image {
            width: 44px;
            position: absolute;
            top: 0;
            left: 0;
            bottom: 0;

            @include media(tablet) {
                width: 70px;
            }
        }

        font-size: 12px;

        @include media(tablet) {
            font-size: 15px;
        }

        .artist {
            display: block;
            margin-bottom: 1px;

            @include media(tablet) {
                margin-bottom: 2px;
            }
        }

        .name {
            display: block;
            font-weight: bold;
            font-size: 13px;
            height: 15px;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;

            @include media(tablet) {
                height: 22px;
                font-size: 17px;
            }
        }

        @include media(tablet) {
            .no-touchevents &:hover {
                max-width: 100%;
            }
        }
    }

    &.expanded {
        box-sizing: border-box;
        height: 100%;
        padding-top: 80px;
        text-align: center;

        .player-mobile {
            display: none;
        }

        .player-collapse {
            display: block;
            z-index: 3;
        }

        .player-details {
            box-sizing: border-box;
            display: inline-block;
            margin: 0 auto;
            position: relative;
            height: auto;
            padding: 40px 10px 40px 120px;
            min-height: 160px;
            text-align: left;
            @extend %clearfix;
            width: 280px;

            .image {
                width: 100px;
                left: 10px;
                top: 40px;
            }

            .artist,
            .name {
                font-size: 16px;
                line-height: 22px;
            }

            .name {
                overflow: visible;
                white-space: normal;
                margin-top: 5px;
            }
        }

        .player-scrubber {
            position: relative;
            width: 260px;
            margin: 10px auto 30px;
        }
    }

    .no-touchevents & [data-player-control] {
        transition: opacity $transition;

        &:hover {
            opacity: 0.7;
        }
    }

    .player-controls {
        @include media(tablet) {
            position: absolute;
            top: 0;
            left: 300px;
            right: 0;
            bottom: 0;
            line-height: 70px;
        }

        a {
            display: inline-block;
            vertical-align: middle;
            margin: 10px 5px;

            @include media(tablet) {
                margin-top: 0;
                margin-bottom: 0;
            }
        }

        .player-controls-main {
            @include media(tablet) {
                float: left;
            }
        }

        .player-controls-additional {
            @include media(tablet) {
                float: right;
            }

            a {
                width: 40px;
                height: 40px;
                text-align: center;
                line-height: 40px;
                margin-top: 0;

                i {
                    display: inline-block;
                    vertical-align: middle;
                }
            }
        }
    }

    &.player-radio {
        .player-mobile {
            width: 40px;
        }

        .player-details {
            padding-right: 40px;

            @include media(tablet) {
                max-width: 500px;
            }
        }

        .player-controls {
            @include media(tablet) {
                left: auto;
            }
        }
    }
}

